--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       <section class="fullcontentabout">
         <div class="wrapperabout">
           <img
-            src="assets/aboutusimg.jpg"
+            src="./assets/aboutusimg.jpg"
             id="aboutimage"
             alt="decorative image"
           />
@@ -67,7 +67,7 @@
             sustainable future.
           </p>
         </div>
-        <img src="assets/rainylogo.png" alt="logophoto" id="logobottomabout" />
+        <img src="./assets/rainylogo.png" alt="logophoto" id="logobottomabout" />
       </section>
     </main>
     <footer class="footer">
