--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,7 @@
           <i class="fa fa-shopping-bag" id="shoppingbag">1 items</i>
           <p>______________________________</p>
           <div class="titlepicturepricecontainer">
-            <img src="assets/jakke7.jpg" alt="productjacket">
+            <img src=".assets/jakke7.jpg" alt="productjacket">
             <div class="textinfoareainsideinformationgrid">
               <a>Mens better jacket</a>
               <p>1899,-</p>
