--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
   <section class="fullcontentcontact">
     <h1 class="hidoh1">Contact us</h1>
     <div class="wrappercontact">
-        <img src="assets/contactusimage.jpg" id="aboutimage" alt="decorative image">
+        <img src="./assets/contactusimage.jpg" id="aboutimage" alt="decorative image">
     </div>
     </div>
     <section class="formsectioncontact">
@@ -65,7 +65,7 @@
                 <input type="submit" value="Submit" id="submitbutton">
                 </form>
         </div>
-        <img src="assets/RainyDays_Logo.png" id="contactusimagebottom">
+        <img src="./assets/RainyDays_Logo.png" id="contactusimagebottom">
     </section>
   </section>
 </main>
