--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
       </div>
       <div class="cardsindex">
         <div class="card">
-          <img src="/assets/jakke7.jpg" alt="product image" />
+          <img src="./assets/jakke7.jpg" alt="product image" />
           <h2>Mens Better Sweater</h2>
           <p class="price">1899,-</p>
           <a href="productpage.html" aria-label="product page">Shop now</a>
         </div>
         <div class="card">
-          <img src="/assets/jakke7.jpg" alt="product image" />
+          <img src="./assets/jakke7.jpg" alt="product image" />
           <h2>Mens Better Sweater</h2>
           <p class="price">1899,-</p>
           <a href="productpage.html" aria-label="product page">Shop now</a>
         </div>
         <div class="card">
-          <img src="/assets/jakke7.jpg" alt="product image" />
+          <img src="./assets/jakke7.jpg" alt="product image" />
           <h2>Mens Better Sweater</h2>
           <p class="price">1899,-</p>
           <a href="productpage.html" aria-label="product page">Shop now</a>
