--- a/productpage.html
+++ b/productpage.html
@@ -29,7 +29,7 @@
 <main class="main"> 
   <div class="containerforproductpage">
     <div class="productpicture">
-      <img src="/assets/prodoctimage1.jpg">
+      <img src="./assets/prodoctimage1.jpg">
     </div>
     <div class="productinfo">
       <h2>Mens better sweater</h2>
