--- a/cartsucsess.html
+++ b/cartsucsess.html
@@ -42,7 +42,7 @@
         <div class="checkoutinformationarea">
           <i class="fa fa-shopping-bag" id="shoppingbag">1 items</i>
           <div class="titlepicturepricecontainer">
-            <img src="assets/jakke7.jpg">
+            <img src=".assets/jakke7.jpg">
             <a>Mens better jacket</a>
             <p>1899,-</p>
           </div>
