--- a/products.html
+++ b/products.html
@@ -31,37 +31,37 @@
   <div class="containerproducts">
     <div class="cardsproducts">
         <div class="card">
-            <img src="/assets/jakke7.jpg" alt="product image">
+            <img src="./assets/jakke7.jpg" alt="product image">
             <h2>Mens Better Sweater</h2>
             <p class="price">1899,-</p>
             <a href="productpage.html" aria-label="product page">Shop now</a>
         </div>
         <div class="card">
-            <img src="/assets/jakke7.jpg" alt="product image">
+            <img src="./assets/jakke7.jpg" alt="product image">
             <h2>Mens Better Sweater</h2>
             <p class="price">1899,-</p>
             <a href="productpage.html" aria-label="product page">Shop now</a>
         </div>
         <div class="card">
-            <img src="/assets/jakke7.jpg" alt="product image">
+            <img src="./assets/jakke7.jpg" alt="product image">
             <h2>Mens Better Sweater</h2>
             <p class="price">1899,-</p>
             <a href="productpage.html" aria-label="product page">Shop now</a>
         </div>
         <div class="card">
-            <img src="/assets/jakke7.jpg" alt="product image">
+            <img src="./assets/jakke7.jpg" alt="product image">
             <h2>Mens Better Sweater</h2>
             <p class="price">1899,-</p>
             <a href="productpage.html" aria-label="product page">Shop now</a>
         </div>
         <div class="card">
-            <img src="/assets/jakke7.jpg" alt="product image">
+            <img src="./assets/jakke7.jpg" alt="product image">
             <h2>Mens Better Sweater</h2>
             <p class="price">1899,-</p>
             <a href="productpage.html" aria-label="product page">Shop now</a>
         </div>
         <div class="card">
-            <img src="/assets/jakke7.jpg" alt="product image">
+            <img src="./assets/jakke7.jpg" alt="product image">
             <h2>Mens Better Sweater</h2>
             <p class="price">1899,-</p>
             <a href="productpage.html" aria-label="product page">Shop now</a>
