--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="corse assignment HTML and CSS @ noroff fagskole">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="author" content="Dannielsan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rainydays index page</title>
     <link
@@ -18,7 +21,7 @@
   </head>
   <body class="site-grid">
     <header>
-      <a href="index.html"><img src="assets/rainylogo.png" /></a>
+      <a href="index.html"><img src="assets/rainylogo.png" alt="logoheader"/></a>
       <div class="dropdown">
         <i
           class="fa fa-shopping-cart"
@@ -32,7 +35,6 @@
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="cart.html">Cart</a>
-          <a href="index.html">index</a>
         </div>
       </div>
     </header>
@@ -41,7 +43,7 @@
       <section class="herocontainer">
         <div class="herosection">
           <!-- <img src="/assets/heroimg.jpg" alt="product image" /> -->
-          <a href="productpage.html" aria-label="heroimage" class="imgbutton-hero"
+          <a href="products.html" aria-label="heroimage" class="imgbutton-hero"
             >Explore our collection</a
           >
         </div>
@@ -56,38 +58,38 @@
           <img src="./assets/jakke7.jpg" alt="product image" />
           <h2>Mens Better Sweater</h2>
           <p class="price">1899,-</p>
-          <a href="productpage.html" aria-label="product page">Shop now</a>
+          <a href="productpage.html" >Shop now</a>
         </div>
         <div class="card">
           <img src="./assets/jakke7.jpg" alt="product image" />
           <h2>Mens Better Sweater</h2>
           <p class="price">1899,-</p>
-          <a href="productpage.html" aria-label="product page">Shop now</a>
+          <a href="productpage.html" >Shop now</a>
         </div>
         <div class="card">
           <img src="./assets/jakke7.jpg" alt="product image" />
           <h2>Mens Better Sweater</h2>
           <p class="price">1899,-</p>
-          <a href="productpage.html" aria-label="product page">Shop now</a>
+          <a href="productpage.html" >Shop now</a>
         </div>
       </div>
       <section class="bottomindexsection">
         <div class="bigimgcontainerindex">
           <div class="bigimg1index">
             <img src="/assets/bigimgwhite.jpg" alt="product image" />
-            <a href="productpage.html" aria-label="product page"
+            <a href="products.html"
               >Explore womens collection</a
             >
           </div>
           <div class="bigimg2index">
             <img src="/assets/bigimageblack.jpg" alt="product image" />
-            <a href="productpage.html" aria-label="product page"
+            <a href="products.html" 
               >Explore mens collection</a
             >
           </div>
         </div>
         <div class="bigimgbottomindex">
-          <a href="productpage.html" aria-label="product page" class="imgbutton-bottom"
+          <a href="products.html" aria-label="product page" class="imgbutton-bottom"
             >Explore our collection</a
           >
         </div>
