--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="corse assignment HTML and CSS @ noroff fagskole">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="author" content="Dannielsan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About us page</title>
     <link
@@ -18,7 +21,7 @@
   </head>
   <body class="site-grid">
     <header>
-      <a href="index.html"><img src="assets/rainylogo.png" /></a>
+      <a href="index.html"><img src="assets/rainylogo.png" alt="logoheader"/></a>
       <div class="dropdown">
         <i
           class="fa fa-shopping-cart"
@@ -32,7 +35,6 @@
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="cart.html">Cart</a>
-          <a href="index.html">index</a>
         </div>
       </div>
     </header>
@@ -40,7 +42,7 @@
       <section class="fullcontentabout">
         <div class="wrapperabout">
           <img
-            src="./assets/aboutusimg.jpg"
+            src="./assets/aboutusimg_200.webp"
             id="aboutimage"
             alt="decorative image"
           />
