--- a/cartsucsess.html
+++ b/cartsucsess.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="corse assignment HTML and CSS @ noroff fagskole">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="author" content="Dannielsan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout sucsess page</title>
     <link
@@ -18,7 +21,7 @@
   </head>
   <body class="site-grid">
     <header>
-      <a href="index.html"><img src="assets/rainylogo.png" /></a>
+      <a href="index.html"><img src="assets/rainylogo.png" alt="logoheader"/></a>
       <div class="dropdown">
         <i
           class="fa fa-shopping-cart"
@@ -32,7 +35,6 @@
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="cart.html">Cart</a>
-          <a href="index.html">index</a>
         </div>
       </div>
     </header>
@@ -41,10 +43,16 @@
       <div class="checkoutgrid">
         <div class="checkoutinformationarea">
           <i class="fa fa-shopping-bag" id="shoppingbag">1 items</i>
+          <p>______________________________</p>
           <div class="titlepicturepricecontainer">
-            <img src=".assets/jakke7.jpg">
-            <a>Mens better jacket</a>
-            <p>1899,-</p>
+            <img src="./assets/jakke7.jpg" alt="productjacketsmall">
+            <div class="textinfoareainsideinformationgrid">
+              <a>Mens better jacket</a>
+              <div class="priceandquantity">
+                <p>Qty:1 </p>
+                <p>1899,-</p>
+              </div>
+            </div>
           </div>
           <p>______________________________</p>
           <div class="checkoutpricegrid">
@@ -52,20 +60,19 @@
               <p>Subtotal</p>
               <p>Shipping</p>
               <p>Vat(included)</p>
-              <p>Total</p>
+              <p><b>Total</b></p>
             </div>
             <div class="numbers">
               <p>Kr. 1999.00</p>
               <p>Kr. 249.00</p>
               <p>Kr. 475.00</p>
-              <p>Kr. 2248.00</p>
+              <p><b>Kr. 2248.00</b></p>
             </div>
-            <imput>checbox</imput>
           </div>
-          
         </div>
         <div class="checkoutinputarea">
           <h2>Thank you for your purchase</h2>
+          <h3>Order number: #00042069</h3>
         </div>
       </div>
     </main>
