--- a/productpage.html
+++ b/productpage.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
       <meta charset="UTF-8">
+      <meta name="description" content="corse assignment HTML and CSS @ noroff fagskole">
+      <meta name="keywords" content="HTML, CSS">
+      <meta name="author" content="Dannielsan">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product page</title>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
@@ -12,7 +15,7 @@
 </head>
 <body class="site-grid">
   <header>
-    <a href="index.html"><img src="assets/rainylogo.png"></a>
+    <a href="index.html"><img src="assets/rainylogo.png" alt="logoheader"></a>
     <div class="dropdown">
         <i class="fa fa-shopping-cart" ref="shoppingcart.html" id="carticon"></i>
         <p>menu</p>
@@ -22,7 +25,6 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="cart.html">Cart</a>
-            <a href="index.html">index</a>
         </div>
     </div>
 </header>
