--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="corse assignment HTML and CSS @ noroff fagskole">
+    <meta name="description" content="Landingpage">
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Dannielsan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -76,13 +77,13 @@
       <section class="bottomindexsection">
         <div class="bigimgcontainerindex">
           <div class="bigimg1index">
-            <img src="/assets/bigimgwhite.jpg" alt="product image" />
+            <img src="./assets/bigimgwhite.jpg" alt="product image" />
             <a href="products.html"
               >Explore womens collection</a
             >
           </div>
           <div class="bigimg2index">
-            <img src="/assets/bigimageblack.jpg" alt="product image" />
+            <img src="./assets/bigimageblack.jpg" alt="product image" />
             <a href="products.html" 
               >Explore mens collection</a
             >
@@ -117,8 +118,7 @@
         <div class="footer3">
           <p class="footertitle3">Sign up for email updates</p>
           <p>E-mail</p>
-          <input type="text" />
-          <a href="emailunsubscribe">E-mail unsubscribe</a>
+          <input type="text" placeholder="Sign up for email updates" name="emailsignup"/>
         </div>
       </div>
     </footer>
