--- a/products.html
+++ b/products.html
@@ -3,6 +3,7 @@
 <head>
       <meta charset="UTF-8">
       <meta name="description" content="corse assignment HTML and CSS @ noroff fagskole">
+      <meta name="description" content="all products page">
       <meta name="keywords" content="HTML, CSS">
       <meta name="author" content="Dannielsan">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,11 +70,6 @@
             <a href="productpage.html" aria-label="product page">Shop now</a>
         </div>
 </div>
-
-
-
-
-  
 </main>
 <footer class="footer">
   <div class="footercollums">
@@ -97,8 +93,7 @@
     <div class="footer3">
       <p class="footertitle3">Sign up for email updates</p>
       <p>E-mail</p>
-      <input type="text" />
-      <a href="emailunsubscribe">E-mail unsubscribe</a>
+      <input type="text" placeholder="Sign up for email updates" name="emailsignup"/>
     </div>
   </div>
 </footer>
