--- a/cart.html
+++ b/cart.html
@@ -22,14 +22,15 @@
   </head>
   <body class="site-grid">
     <header>
-      <a href="index.html"><img src="assets/rainylogo.png" alt="logoheader"/></a>
+      <a href="index.html" class="navlogo"></a>
       <div class="dropdown">
         <i
           class="fa fa-shopping-cart"
           ref="shoppingcart.html"
           id="carticon"
         ></i>
-        <p>menu</p>
+        <input type="checkbox" id="menucheck">
+        <label for="menucheck"><p>menu</p></label>
         <i class="fa fa-bars" id="menuicon"></i>
         <div class="dropdown-content">
           <a href="products.html">Products</a>
