--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,24 @@
 </head>
 <body class="site-grid">
   <header>
-    <a href="index.html"><img src="assets/rainylogo.png" alt="logoheader"></a>
+    <a href="index.html" class="navlogo"></a>
     <div class="dropdown">
-        <i class="fa fa-shopping-cart" ref="shoppingcart.html" id="carticon"></i>
-        <p>menu</p>
-        <i class="fa fa-bars" id="menuicon"></i>
-        <div class="dropdown-content">
-            <a href="products.html">Products</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="cart.html">Cart</a>
-        </div>
+      <i
+        class="fa fa-shopping-cart"
+        ref="shoppingcart.html"
+        id="carticon"
+      ></i>
+      <input type="checkbox" id="menucheck">
+      <label for="menucheck"><p>menu</p></label>
+      <i class="fa fa-bars" id="menuicon"></i>
+      <div class="dropdown-content">
+        <a href="products.html">Products</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="cart.html">Cart</a>
+      </div>
     </div>
-</header>
+  </header>
 <main class="main"> 
   <section class="fullcontentcontact">
     <h1 class="hidoh1">Contact us</h1>
