--- a/cart.html
+++ b/cart.html
@@ -82,7 +82,7 @@
             <input type="text" placeholder="Contry/region" name="contry">
             <input type="text" placeholder="City" name="City">
             <input type="text" placeholder="Adress" id="adress" name="adress">
-            <button type="submit" name="cartmutton"><a href="cartsucsess.html"></a>Payment</button>
+            <button type="submit" name="cartbutton" class="paymentbutton"><a href="cartsucsess.html" class="paymentbutton">Payment</a></button>
           </form>
           <div class="checkbox">
             <input type="checkbox" name="checbox" class="checkbox">
