--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Dannielsan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rainydays index page</title>
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-      rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    rel="stylesheet"
     />
     <link href="styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+    rel="stylesheet"
     />
+    <script src="script.js" ></script> //defer
+    <title>Rainydays index page</title>
   </head>
   <body class="site-grid">
     <header>
