api and product cards

--- a/jstestPage.html
+++ b/jstestPage.html
@@ -31,12 +31,10 @@
         </div>
     </div>
 </div>
-  <div class="singleProduct">
-    <img src="" class="card-img-top" alt="Product Image" id="product-image">
-    <div class="card-body">
-      <h1 class="card-title" id="product-name"></h1>
-      <p class="card-text" id="product-description"></p>
-      <p class="card-price" id="product-price"></p>
-    </div>
+  <div class="cards" id="singleCardContainer">
+  </div>
+  <div class="filtered" id="filteredCardContainer">
+  </div>
+  
 </body>
 </html>
