--- a/productpage.html
+++ b/productpage.html
@@ -1,131 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta name="description" content="corse assignment HTML and CSS @ noroff fagskole">
-      <meta name="description" content="spesific product page">
-      <meta name="keywords" content="HTML, CSS">
-      <meta name="author" content="Dannielsan">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="corse assignment HTML and CSS @ noroff fagskole"
+    />
+    <meta name="description" content="spesific product page" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="author" content="Dannielsan" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product page</title>
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-      <link href="styles.css" rel="stylesheet"/>
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-</head>
-<body class="site-grid">
-  <header>
-    <a href="index.html" class="navlogo"></a>
-    <div class="dropdown">
-      <i
-        class="fa fa-shopping-cart"
-        href="cart.html"
-        id="carticon"
-      ></i>
-      <input type="checkbox" id="menucheck">
-      <label for="menucheck"><p>menu</p></label>
-      <i class="fa fa-bars" id="menuicon"></i>
-      <div class="dropdown-content">
-        <a href="products.html">Products</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="cart.html">Cart</a>
-      </div>
-    </div>
-  </header>
-<main class="main"> 
-  <div class="containerforproductpage">
-    <div class="productpicture">
-      <img src="./assets/prodoctimage1.jpg" alt="mainphoto">
-    </div>
-    <div class="productinfo">
-      <h2>Mens better sweater</h2>
-      <h3>Kr. 1899,-</h3>
-      <!-- <div class="productinfolineseperator">_____________________________</div> -->
-      <p>_____________________________</p>
-      <div class="bulletpointsproducttext">
-        <div class="bulletpoints1">
-          <ul>
-            <li>YKK®-zipper</li>
-            <li>Windproof and breathebale</li>
-            <li>2-layer construction</li>
-            <li>100 % sealed seam</li>
-          </ul>
-          
-        </div>
-        <div class="bulletpoints2">
-          <ul>
-            <li>Comfortable interior</li>
-            <li>Thigh-length</li>
-            <li>Pockets with zippers</li>
-            <li>Recycled material</li>
-          </ul>
-
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <script src="productPage.js"></script>
+  </head>
+  <body class="site-grid">
+    <header>
+      <a href="index.html" class="navlogo"></a>
+      <div class="dropdown">
+        <i class="fa fa-shopping-cart" href="cart.html" id="carticon"></i>
+        <input type="checkbox" id="menucheck" />
+        <label for="menucheck"><p>menu</p></label>
+        <i class="fa fa-bars" id="menuicon"></i>
+        <div class="dropdown-content">
+          <a href="products.html">Products</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+          <a href="cart.html">Cart</a>
         </div>
       </div>
-      <details>
-        <summary><b>More information</b></summary>
-        <br>
-        Introducing the EcoTrail™ Recycled Fleece Hiking Jacket: Your Sustainable Adventure Companion
-
-Elevate your outdoor experiences while minimizing your environmental footprint with our EcoTrail™ Recycled Fleece Hiking Jacket. Crafted with a commitment to sustainability, this versatile jacket is not only a testament to style but also to responsible outdoor exploration.
-
-Key Features:
-
-Recycled Materials: Our EcoTrail™ jacket is made from high-quality recycled materials, helping to reduce plastic waste and minimize the impact on our planet. Each jacket is composed of post-consumer plastic bottles, which are transformed into a soft, warm, and durable fleece fabric.
-
-Eco-Friendly Insulation: Designed for exceptional warmth without added bulk, the jacket's fleece insulation provides optimal temperature regulation during your hikes. Whether you're trekking through chilly mountain passes or enjoying crisp autumn strolls, you'll stay cozy and comfortable.
-
-Versatile Design: The jacket's sleek design ensures it's as suitable for everyday wear as it is for outdoor adventures. Its tailored fit and clean lines make it a stylish choice for urban exploration, while its performance features are perfect for the trail.
-
-Moisture Management: Our fleece material is not only warm but also moisture-wicking, ensuring you stay dry even when you're working up a sweat. This feature is essential for those unpredictable weather days or when you need to layer up.
-Sustainable Manufacturing: Our commitment to sustainability doesn't end with materials; it extends to responsible manufacturing practices. We take pride in our supply chain's minimal environmental impact and ethical labor standards.
-
-Multiple Pockets: Keep your essentials within easy reach with the jacket's ample pockets. From your smartphone to trail maps and energy snacks, you'll have everything you need right at your fingertips.
-
-Join us in making a difference with sustainable outdoor gear. The EcoTrail™ Recycled Fleece Hiking Jacket is not just a jacket; it's a statement of your commitment to a greener, more responsible world. Whether you're conquering mountain peaks or strolling through local parks, do it in style, comfort, and with the environment in mind.
-
-Choose the EcoTrail™ Recycled Fleece Hiking Jacket today and embark on your adventures while leaving a positive impact on the planet. Upgrade your outdoor experience and be part of the movement toward a more sustainable future.
-      </details>
-      <div class="sizebuttonscontainer">
-        <button>S</button>
-        <button>M</button>
-        <button>L</button>
-        <button>XL</button>
-        <button>XXL</button>
+    </header>
+    <main class="productpage">
+      <div class="productpage_container" id="productpage_container"">
       </div>
-      <div class="addtocartcontainer">
-        <a href="cart.html">add to cart</a>        
-      </div>
-    </div>
-  </div>
-</main>
-<footer class="footer">
-  <div class="footercollums">
-<!--         <p>Copyright&copy;</p> -->
-    <div class="footer1">
-      <p class="footertitle1">May we help you</p>
-      <ul>
-        <li><a href="contact.html"></a>Contact</li>
-        <li><a href="about.html"></a>FAQ</li>
-        <li><a href="about.html"></a>About us</li>
-      </ul>
-    </div>
-    <div class="footer2">
-      <p class="footertitle2">Your profile</p>
-      <ul>
-        <li><a href="signin.html"></a>Contact</li>
-        <li><a href="cart.html"></a>Orders</li>
-        <li><a href="privacy.html"></a>Privacy and cookie policy</li>
-      </ul>
-    </div>
-    <div class="footer3">
-      <p class="footertitle3">Sign up for email updates</p>
-      <p>E-mail</p>
-      <input type="text" placeholder="Sign up for email updates" name="emailsignup"/>
-    </div>
-  </div>
-</footer>
+    </main>
   </body>
 </html>
