working state of single productpage

--- a/productpage.html
+++ b/productpage.html
@@ -46,3 +46,23 @@
     </main>
   </body>
 </html>
+<style>
+  button {
+    background-color: var(--blue);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 1rem;
+  }
+  .green {
+    background-color: green;
+    transform: rotate3d(1, 1, 1, 45deg);
+  }
+  button:hover {
+    background-color: var(--white);
+    border: 1.5px solid var(--blue);
+    color: var(--blue);
+  }
+</style>
