--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Card</title>
-  <script src="testscript.js" defer></script>
+  <script src="script.js" defer></script>
   <link href="stylestest.css" rel="stylesheet" />
 </head>
 <body>
