--- a/productpage.html
+++ b/productpage.html
@@ -56,7 +56,7 @@
     cursor: pointer;
     margin: 1rem;
   }
-  .green {
+  .cartButton {
     background-color: green;
     transform: rotate3d(1, 1, 1, 45deg);
   }
