--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product Card</title>
-  <script src="script.js" defer></script>
-  <link href="stylestest.css" rel="stylesheet" />
-</head>
-<body>
-  <div class="banner">
-    <div class="navbar">
-        <img src="./assets/rainylogo.png" alt="REMOVE INLINE" class="logo" style="max-width: 150px;">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product Card</title>
+    <script src="script.js" defer></script>
+    <link href="stylestest.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="banner">
+      <div class="navbar">
+        <img
+          src="./assets/rainylogo.png"
+          alt="REMOVE INLINE"
+          class="logo"
+          style="max-width: 150px"
+        />
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Equipment</a></li>
-            <li><a href="#">Trails</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">About Us</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="productpage.html">Products</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="cart.html">Cart</a></li>
         </ul>
-    </div>
+      </div>
 
-    <div class="content">
-        <h1>
-          Discover your adventure</h1>
-        <p>
-          Explore our collection</p>
+      <div class="content">
+        <h1>Discover your adventure</h1>
+        <p>Explore our collection</p>
         <div>
-            <button class="women-btn" type="button"><span class="cover"></span>Mens</button>
-            <button class="men-btn" type="button"><span class="cover"></span>Womens</button>
+          <button class="women-btn" type="button">
+            <span class="cover"></span>Mens
+          </button>
+          <button class="men-btn" type="button">
+            <span class="cover"></span>Womens
+          </button>
         </div>
+      </div>
     </div>
-</div>
-  <div class="cards" id="singleCardContainer">
-  </div>
-  <div class="filtered" id="filteredCardContainer">
-  </div>
-  
-</body>
+    <div class="cards" id="singleCardContainer"></div>
+    <div class="filtered" id="filteredCardContainer"></div>
+  </body>
 </html>
